Link para o github criado na navbar

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,6 +5,7 @@
     <title>Hack the Campus</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
@@ -13,9 +14,10 @@
        <nav class="navbar navbar-default navbar-fixed-top">
            <div class="collapse navbar-collapse" id="menu">
                <ul class="nav navbar-nav navbar-right">
-                   <li class="ativo"><a href="index.html">INICIO</a>
-                   <li><a href="">SOBRE</a>
-                   <li><a href="">CATÁLOGO</a>
+                   <li class="ativo"><a href="index.html">INICIO</a></li>
+                   <li><a href="about.html">SOBRE</a></li>
+                   <li><a href="">CATÁLOGO</a></li>
+                   <li><a href="https://github.com/inoridv/brand-new-eyes" style="padding-top:20px;"><img src="img/git-icon.png" id="github">GitHub</a></li>
                </ul>
            </div>
        </nav>
