--- a/webapp/about.html
+++ b/webapp/about.html
@@ -5,15 +5,16 @@
   <title>Sobre</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/index.css">
-  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+  <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
 </head>
   <body style="background-color:#003333">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="collapse navbar-collapse" id="menu">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="index.html">INICIO</a>
-                <li class="ativo"><a href="about.html">SOBRE</a>
-                <li><a href="">CATÁLOGO</a>
+                <li><a href="index.html">INICIO</a></li>
+                <li class="ativo"><a href="about.html">SOBRE</a></li>
+                <li><a href="">CATÁLOGO</a></li>
+                <li><a href="https://github.com/inoridv/brand-new-eyes" style="padding-top:20px;"><img src="img/git-icon.png" id="github">GitHub</a></li>
             </ul>
         </div>
     </nav>
