--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,42 +2,45 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hack the Campus</title>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
 
     <!--Navbar-->
-       <nav class="navbar navbar-default navbar-fixed-top">
-           <div class="collapse navbar-collapse" id="menu">
-               <ul class="nav navbar-nav navbar-right">
-                   <li class="ativo"><a href="index.html">INICIO</a>
-                   <li><a href="">SOBRE</a>
-                   <li><a href="">CATÁLOGO</a>
-               </ul>
-           </div>
-       </nav>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="collapse navbar-collapse" id="menu">
+        <ul class="nav navbar-nav navbar-right">
+           <li class="ativo"><a href="index.html">INICIO</a></li>
+           <li><a href="">SOBRE</a></li>
+           <li><a href="">CATÁLOGO</a></li>
+        </ul>
+       </div>
+    </nav>
 
+    <!--Imagem do campus da UNICAMP-->
     <img id="fundo" src="unicamp.png" usemap="#fund">
     <map id="fund_map" name="fund">
-        <area shape="poly" name="IC" coords="434,90, 453,83, 448,71, 448,60, 426,69, 425,77" href="#" onclick="alteradivs(1)" onmouseover="criadiv($(this))" onmouseout="$('#conteudo').css('display','none')">
-        <area shape="poly" name="IC" coords="420,139, 415,132, 419,129, 413,119, 379,132, 388,154" href="#" onclick="alteradivs(1)" onmouseover="criadiv($(this))" onmouseout="$('#conteudo').css('display','none')">
-
+      <!--Contorno do instituto-->
+      <area shape="poly" name="IC" coords="434,90, 453,83, 448,71, 448,60, 426,69, 425,77" href="#" onclick="alteradivs(1)" onmouseover="criadiv($(this))" onmouseout="$('#conteudo').css('display','none')">
+      <area shape="poly" name="IC" coords="420,139, 415,132, 419,129, 413,119, 379,132, 388,154" href="#" onclick="alteradivs(1)" onmouseover="criadiv($(this))" onmouseout="$('#conteudo').css('display','none')">
     </map>
-    <div id="conteudo">
-      Clique no instituto para mais informações
-    </div>
+
+    <!--Conteúdo da mensagem no cursor-->
+    <div id="conteudo">Clique no instituto para mais informações</div>
+
+    <!--Gráficos e informações-->
     <div id="dados"></div>
     <div id="piechart0"></div>
     <div id="piechart1"></div>
     <div id="piechart2"></div>
     <div id="columnchart"></div>
     <div id="chart"></div>
+
   </body>
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/jquery.imagemapster.min.js"></script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
 </html>
