--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <title>Hack the Campus</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
@@ -16,6 +17,7 @@
            <li class="ativo"><a href="index.html">INICIO</a></li>
            <li><a href="">SOBRE</a></li>
            <li><a href="">CATÁLOGO</a></li>
+            <li><a href="https://github.com/inoridv/brand-new-eyes" style="padding-top:20px;"><img src="img/git-icon.png" id="github">GitHub</a></li>
         </ul>
        </div>
     </nav>
