[webapp] Resolving conflicts

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,7 +15,7 @@
       <div class="collapse navbar-collapse" id="menu">
         <ul class="nav navbar-nav navbar-right">
            <li class="ativo"><a href="index.html">INICIO</a></li>
-           <li><a href="">SOBRE</a></li>
+           <li><a href="about.html">SOBRE</a></li>
            <li><a href="">CATÁLOGO</a></li>
             <li><a href="https://github.com/inoridv/brand-new-eyes" style="padding-top:20px;"><img src="img/git-icon.png" id="github">GitHub</a></li>
         </ul>
